examples/test/testpolicy92.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy92
  namespace: namespace176
spec:
  podSelector:
    matchLabels:
      key39: value21
      key9: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value14
          key6: value21
          key40: value46
      podSelector:
        matchLabels:
          key24: value13
          key32: value23
          key30: value33
